--- a/components/navbar.html
+++ b/components/navbar.html
@@ -7,6 +7,7 @@
     <ul class="flex items-center gap-6 text-sm">
       <li><a class="hover:text-white/80" href="/products.html">Products</a></li>
       <li><a class="hover:text-white/80" href="/collections.html">Collections</a></li>
+      <li><a class="hover:text-white/80" href="/checkout.html">Checkout</a></li>
       <li><a class="hover:text-white/80" href="/app.html">App</a></li>
     </ul>
   </div>
